src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>AnswerText__c</fullName>
        <label>Answer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AnswerTextRequired</fullName>
        <active>true</active>
        <description>The Answer text is required.</description>
        <errorConditionFormula>ISBLANK( AnswerText__c )</errorConditionFormula>
        <errorDisplayField>AnswerText__c</errorDisplayField>
        <errorMessage>The answer text is required.</errorMessage>
    </validationRules>
</CustomObject>